about me: photo and text added

--- a/index.html
+++ b/index.html
@@ -27,5 +27,20 @@
             <img src="assets/Images/Logo.png" alt="Logo">
         </figure>
     </main>
+
+    <section>
+        <h2>about me</h2>
+            <p>
+            An ambitious Fine Art graduate with exceptional organisation and time management skills. 
+            Proven work experience within the museum and gallery sector, not for profit organisation and sport centers.
+            </p>
+            <figure>
+                <img src="assets/Images/Photo_HH.JPEG" alt="Hannelize Human">
+            </figure>
+    </section>
+
+    <section>
+        
+    </section>
 </body>
 </html>
