added work section to webpage with flip boxes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="assets/CSS/style.css">
     <title>Hannelize Human</title>
 </head>
@@ -45,7 +46,55 @@
     
     <!--Work Secton-->
     <section id="work" class="work container">
+        <div class="work-header">
+            <h1 class="work-header-heading">Work</h1>
+            <p class="work-header-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="work-info">
+            <div class="work">
+                <div class="work-card">
+                    <div class="work-front">
+                        <i class="fas fa-laptop-code"></i>
+                        <h1 class="work-front-heading">Horiseon</h1>
+                    </div>
+                    <div class="work-back">
+                        <h1 class="work-back-heading">Horiseon</h1>
+                        <p class="work-back-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
+            </div>
 
+            <div class="work">
+                <div class="work-card">
+                    <div class="work-front">
+                        <i class="fas fa-paint-brush"></i>
+                        <h1 class="work-front-heading">Art Portfolio</h1>
+                    </div>
+                    <div class="work-back">
+                        <h1 class="work-back-heading">Art Portfolio</h1>
+                        <p class="work-back-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="work">
+                <div class="work-card">
+                    <div class="work-front">
+                        <i class="fas fa-spinner"></i>
+                        <h1 class="work-front-heading">Comming soon</h1>
+                    </div>
+                    <div class="work-back">
+                        <h1 class="work-back-heading">Comming Soon</h1>
+                        <p class="work-back-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
             
 
