links to external web pages added, logo img readded, buttons in work section added

--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
     <!--Nav Bar-->
     <section id="nav-bar" class="container">
         <header class="nav-bar">
-            <div class="brand"><a href="#"><h1>HH</h1></a></div>
             <div class="nav-list">
                 <div class="hamburger">
                     <div class="bar"></div>
                 </div>
                 <ul>
-                    <li><a href="#">About me</a></li>
-                    <li><a href="#">Work</a></li>
-                    <li><a href="#">Contact Me</a></li>
+                    <li><a href="#about me">About me</a></li>
+                    <li><a href="#work">Work</a></li>
+                    <li><a href="#footer">Contact Me</a></li>
                 </ul>
             </div>
         </header>
@@ -29,9 +28,9 @@
 
     <!--Hero Section Start-->
     <section id="hero" class="hero container">
-        <!--<div class="logo">
+        <div class="logo">
             <img src="assets/Images/Logo.png" alt="Logo" height="400">
-        </div>-->
+        </div>
         <div class="hero-info">
             <h1 class="hero-heading-1">HANNELIZE</h1>
             <h1 class="hero-heading-2">HUMAN</h1>
@@ -46,7 +45,7 @@
                 <h2 class="about-info-heading">about me</h2>
                  <p class="about-info-description">An ambitious Fine Art graduate with exceptional organisation and time management skills. 
                         Proven work experience within the museum and gallery sector, not for profit organisation and sport centers.</p>
-                <a href="#" type="button" class="about-info-button">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1f9dTCWkiQdfi-C9Z9SVVtnPbxJ-Cqu-q/view?usp=sharing" type="button" class="about-info-button">Download Resume</a>
             </div>
          </div>
             
@@ -67,6 +66,12 @@
             <p class="work-header-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="work-links">   
+                <ul>
+                    <li> <a href="https://github.com/HannelizeHuman/Horiseon" type="button" class="Horiseon">Horiseon</a></li>
+                    <li><a href="https://hannelizehuman.com/" type="button" class="Portfolio">Portfolio</a></li>
+                </ul>
+            </div> 
         </div>
         <div class="work-info">
             <div class="work">
