--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="bar"></div>
                 </div>
                 <ul>
-                    <li><a href="#about me">About me</a></li>
+                    <li><a href="#about">About me</a></li>
                     <li><a href="#work">Work</a></li>
                     <li><a href="#footer">Contact Me</a></li>
                 </ul>
